--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,6 +9,7 @@ $line-height-base: 1.6;
 
 // Colors
 $blue: #3490dc;
+//$blue: #199EB8;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
@@ -18,3 +19,26 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$grid-columns:      12;
+$grid-gutter-width: 30px;
+
+$grid-breakpoints: (
+  // Extra small screen / phone
+  xs: 0,
+  // Small screen / phone
+  sm: 576px,
+  // Medium screen / tablet
+  md: 992px,
+  // Large screen / desktop
+  lg: 1200px,
+  // Extra large screen / wide desktop
+  xl: 1800px
+);
+
+$container-max-widths: (
+  sm: 540px,
+  md: 960px,
+  lg: 1140px,
+  xl: 1760px
+);
