--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,7 +28,7 @@ body {
   box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
   border-top: 4px solid #00b5ad;
   border-bottom: 1px solid #e8e8e8;
-  margin-bottom: 40px;
+  margin-bottom: 0.6rem;
   margin-top: 0px;
 }
 
@@ -74,4 +74,10 @@ body {
     border-radius: 4px;
     padding: 3px;
   }
+}
+
+/* Index register page */
+.indexblock {
+    height: 490px;
+    overflow: hidden;
 }
