--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16352,11 +16352,29 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
 }
 
+@font-face {
+  font-family: "iconfont";
+  src: url(/fonts/iconfont.eot?27fac1ef7e15bbdf2e9f0b70c579e95f);
+  src: url(/fonts/iconfont.eot?27fac1ef7e15bbdf2e9f0b70c579e95f) format("embedded-opentype"), url(/fonts/iconfont.woff2?50cb6a74689ba3ebcf000b512fcde937) format("woff2"), url(/fonts/iconfont.woff?cdc529773c8fbca9c1cfd73dc9e9e8f0) format("woff"), url(/fonts/iconfont.ttf?d00e657dcb225347e6b5371a93a3cf88) format("truetype"), url(/fonts/iconfont.svg?f46ec8fc1a76c998f52d551a755606b6) format("svg");
+}
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /* universal */
 
 body {
   font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
   font-size: 14px;
+}
+
+.text-indent {
+  text-indent: 2rem;
 }
 
 /* header */
