--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,10 +37,11 @@ body {
   font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
   font-size: 14px;
 }
+
+/* localhost all */
 .text-indent{text-indent: 2rem;}
 
 /* header */
-
 .navbar-static-top {
   border-color: #e7e7e7;
   background-color: #fff;
