news topics avatar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,6 +46,11 @@ body {
   height: 4rem;
   overflow: hidden;
 }
+.news-avatar{
+  height: 225px;
+  width: 100%; 
+  display: block;
+}
 
 /* header */
 .navbar-static-top {
