--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16384,6 +16384,12 @@ body {
   overflow: hidden;
 }
 
+.news-avatar {
+  height: 225px;
+  width: 100%;
+  display: block;
+}
+
 /* header */
 
 .navbar-static-top {
